➕ Add easy track project

--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
   </head>
   <body>
     <h1>Courses:</h1>
+    <ul>
+      <li>
+        <a href="/easy-track">Easy Track</a>
+      </li>
+    </ul>
   </body>
 </html>
